Refactor AuthController e rimozione PasswordHelper
- Rimosse importazioni inutilizzate in AuthController.cs.
- Aggiunte nuove importazioni e rinominate variabili in AuthController.
- Modificato costruttore di AuthController per usare IGenreService.
- Sostituite chiamate a _authService e _dataContext.Genres.
- Aggiunta importazione in AuthService.cs.
- Rimossa classe PasswordHelper e interfaccia IPasswordHelper.
- Aggiornato _Layout.cshtml: rimosso link CSS, modificato link "I miei biglietti", aggiunto link per area Admin.

--- a/Capstone/Views/Shared/_Layout.cshtml
+++ b/Capstone/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
     <title>@ViewData["Title"] - Capstone</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Capstone.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -53,7 +52,10 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Cart">Carrello</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="MyTickets">I miei biglietti</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="List">I miei biglietti</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link fw-bolder text-danger" asp-area="" asp-controller="Admin" asp-action="Dashboard">Admin</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link fw-bolder text-danger" asp-area="" asp-controller="Auth" asp-action="Logout">Esci</a>
