--- a/Capstone/Views/Master/MasterDashboard.cshtml
+++ b/Capstone/Views/Master/MasterDashboard.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h2>Users Management</h2>
+<div asp-validation-summary="All" class="text-danger"></div>
 <table class="table">
     <thead>
         <tr>
