--- a/Capstone/Views/Shared/_Layout.cshtml
+++ b/Capstone/Views/Shared/_Layout.cshtml
@@ -3,70 +3,122 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Capstone</title>
+    <title>Ton?ght - Club, Dance, Repeat</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="shortcut icon" href="/images/LogoIco.ico" class="rounded-1" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400" rel="stylesheet">
+
+
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Capstone</a>
+        @* <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3">
+            <div class="container-fluid bg-dark">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="/images/Logo-2.png" alt="logo" width="140"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+
+                    <div class="d-flex justify-content-between ">
                         @if(!User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Login">Accedi</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Register">Registrati</a>
-                            </li>
+                            <ul class="navbar-nav ">
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Auth" asp-action="Login">Accedi</a>
+                                </li>
+                            </ul>
                         }
                         else
                         {
+                            <ul class="navbar-nav ">
                             
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Master" asp-action="MasterDashboard">MASTER</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Event" asp-action="List">EVENTI</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Dj" asp-action="List">DJ</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Location" asp-action="List">Locations</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Genre" asp-action="List">Genres (music)</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Profile">Utente</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Cart">Carrello</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="List">I miei biglietti</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link fw-bolder text-danger" asp-area="" asp-controller="Admin" asp-action="Dashboard">Admin</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link fw-bolder text-danger" asp-area="" asp-controller="Auth" asp-action="Logout">Esci</a>
-                            </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Master" asp-action="MasterDashboard">MASTER</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Event" asp-action="List">EVENTI</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Dj" asp-action="List">DJ</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Location" asp-action="List">Locations</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Genre" asp-action="List">Genres (music)</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="User" asp-action="Profile">Utente</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Cart" asp-action="Cart">Carrello</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Ticket" asp-action="List">I miei biglietti</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link fw-bolder text-danger" asp-area="" asp-controller="Admin" asp-action="Dashboard">Admin</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link fw-bolder text-danger" asp-area="" asp-controller="Auth" asp-action="Logout">Esci</a>
+                                </li>
+                            </ul>
                         }
-                    </ul>
+                    </div>
+                </div>
+            </div>
+        </nav> *@
+        <nav class="navbar navbar-expand-md navbar-dark py-1" id="navbar">
+           
+
+            <div class="container-fluid">
+                <a asp-controller="Home" asp-action="Index" class="navbar-brand d-md-none">
+                    <img src="/images/Logo-2.png" alt="logo" width="120px">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="row justify-content-center align-items-center w-100">
+
+                        <ul class="navbar-nav col-4 d-flex justify-content-center align-items-center">
+                            <li class="nav-item me-2">
+                                <a asp-controller="Home" asp-action="Index" class="nav-link active fs-4" aria-current="page"><i class="bi bi-house-door"></i></a>
+                            </li>
+                        </ul>
+
+                        <div class="col-4 d-flex justify-content-center">
+                            <a asp-controller="Home" asp-action="Index" class="navbar-brand mx-auto">
+                                <img src="/images/Logo-2.png" alt="Logo" width="140px">
+                            </a>
+                        </div>
+
+                        <ul class="navbar-nav col-4 d-flex justify-content-center align-items-center">
+                            <li class="nav-item">
+                                <a asp-controller="Home" asp-action="About" class="nav-link">Chi siamo</a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-controller="Event" asp-action="List" class="nav-link">Scopri i nostri eventi</a>
+                            </li>
+                            
+                            <li class="nav-item ms-2">
+                                <a asp-action="Login" asp-controller="Auth" class="nav-link fs-4"><i class="bi bi-person-circle"></i></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
+
+
+
     </header>
-    <div class="container">
+    <div class="container-fluid p-0">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
