--- a/Capstone/wwwroot/css/site.css
+++ b/Capstone/wwwroot/css/site.css
@@ -1,5 +1,14 @@
 html {
-  font-size: 14px;
+    font-size: 18px!important;
+}
+
+h1, h2, h3 {
+    font-family: 'Montserrat', sans-serif!important;
+    font-weight: 700;
+}
+
+p {
+    font-weight: 400;
 }
 
 @media (min-width: 768px) {
@@ -18,5 +27,64 @@ html {
 }
 
 body {
+    font-family: 'Oswald', sans-serif!important;
   margin-bottom: 60px;
+}
+
+
+#navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(15px);
+    transition: top 0.5s;
+}
+.fullscreen-bg {
+    width: 100%;
+    height: 100vh; /* Imposta l'altezza dell'immagine al 100% dell'altezza della viewport */
+    object-fit: cover; /* Adatta l'immagine per coprire completamente l'area senza distorcere le proporzioni */
+}
+
+
+.text-overlay {
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white; /* Colore del testo */
+    text-align: center;
+    
+}
+@media (max-width: 768px) {
+    .text-overlay {
+        top: 74%; 
+    }
+}
+.mybg {
+     background-color: black;
+}
+
+.myTitle{
+    color: black;
+}
+
+.myText {
+    color: #666666;
+}
+
+.video {
+    width: auto;
+    height: calc(-120px + 100vh);
+    max-height: 960px;
+    border-radius: 10px;
+    transition: border-radius 0.5s ease;
+}
+
+/* Media Queries per Dispositivi Mobili */
+@media (max-width: 768px) {
+    .video {
+        max-height: 50vh; /* Riduce l'altezza massima su schermi più piccoli */
+    }
 }
