Rinomina metodi e aggiungi descrizione DJ
- Importato il namespace `Capstone.Models.ViewModels` in `DjController.cs`.
- Modificato il metodo `Create` in `DjController.cs` per reindirizzare a `Details`.
- Rinominato il metodo `Detail` in `DjController.cs` in `Details` e gestito il caso di DJ non trovato con errore 404.
- Aggiunto un ViewModel per includere eventi correlati in `Details`.
- Modificato il metodo `UpdateDjAsync` in `DjController.cs` per reindirizzare a `Details`.
- Aggiunta una nuova migrazione `20240916031023_added-description-for-djs` per aggiungere la colonna `ArtistDescription` alla tabella `Djs`.
- Aggiunta la proprietà `ArtistDescription` alla classe `Dj`.
- Creato un nuovo ViewModel `DjDetailsViewModel` per includere un DJ e i suoi eventi correlati.
- Aggiornato il metodo `UpdateDjAsync` in `DjService.cs` per includere `ArtistDescription`.
- Aggiunto il metodo `GetRelatedEventsAsync` in `DjService.cs` per ottenere eventi correlati a un DJ.
- Aggiunto il metodo `SearchDjsAsync` in `DjService.cs` per cercare DJ per nome.
- Aggiornata l'interfaccia `IDjService` per includere i nuovi metodi `SearchDjsAsync` e `GetRelatedEventsAsync`.
- Aggiunta la possibilità di inserire una descrizione dell'artista nel form di creazione in `Create.cshtml`.
- Corretto il percorso dello script `dj_create.js` in `Create.cshtml`.
- Aggiunto il modello `DjDetailsViewModel` alla vista `Details.cshtml`.
- Inclusione di un file CSS specifico (`dj_details.css`) nella vista `Details.cshtml`.
- Creata una struttura HTML per visualizzare i dettagli dell'artista, inclusi nome, descrizione, immagine e un iframe di Spotify.
- Aggiunta una sezione per visualizzare gli eventi associati all'artista nella vista `Details.cshtml`.
- Aggiunta una sezione per visualizzare eventi correlati nella vista `Details.cshtml`.
- Inclusione di un file JavaScript specifico (`dj_details.js`) nella vista `Details.cshtml`.
- Aggiunto un campo per la descrizione dell'artista nel form di modifica (`Edit.c

--- a/Capstone/Views/Dj/Create.cshtml
+++ b/Capstone/Views/Dj/Create.cshtml
@@ -15,7 +15,7 @@
 
             <div class="form-group">
                 <label for="searchArtist" class="control-label">Search for Artist</label>
-                <input type="text" id="searchArtist" class="form-control" placeholder="Type artist name" />             
+                <input type="text" id="searchArtist" class="form-control" placeholder="Type artist name" />
             </div>
 
             <div class="form-group">
@@ -28,6 +28,11 @@
                 <label asp-for="ArtistSpotifyId" class="control-label"></label>
                 <input asp-for="ArtistSpotifyId" id="artistSpotifyId" class="form-control" />
                 <span asp-validation-for="ArtistSpotifyId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ArtistDescription" class="control-label"></label>
+                <input type="text" asp-for="ArtistDescription" class="form-control" />
+                <span asp-validation-for="ArtistDescription" class="text-danger"></span>
             </div>
 
             <div class="form-group">
@@ -46,6 +51,4 @@
     <a asp-action="List">Back to List</a>
 </div>
 
-@section Scripts {
-    <script src="~/js/dj_create.js"></script>
-}
+<script src="/js/dj_create.js"></script>
