--- a/Capstone/Views/Shared/_Layout.cshtml
+++ b/Capstone/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="shortcut icon" href="/images/LogoIco.ico" class="rounded-1" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400" rel="stylesheet">
@@ -73,62 +74,145 @@
                 </div>
             </div>
         </nav> *@
-        <nav class="navbar navbar-expand-md navbar-dark py-1" id="navbar">
-           
-
+        <nav class="navbar navbar-expand-md navbar-dark py-1 " id="navbar">
             <div class="container-fluid">
-                <a asp-controller="Home" asp-action="Index" class="navbar-brand d-md-none">
-                    <img src="/images/Logo-2.png" alt="logo" width="120px">
+                <!-- Logo visibile solo su mobile (d-md-none) -->
+                <a asp-controller="Home" asp-action="Index" class="navbar-brand d-md-none ">
+                    <img src="/images/Logo-2.png" alt="logo" width="100px">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <div class="row justify-content-center align-items-center w-100">
+                <!-- Pulsante per aprire la modale -->
 
-                        <ul class="navbar-nav col-4 d-flex justify-content-center align-items-center">
-                            <li class="nav-item me-2">
-                                <a asp-controller="Home" asp-action="Index" class="nav-link active fs-4" aria-current="page"><i class="bi bi-house-door"></i></a>
-                            </li>
-                        </ul>
+              
+                <div class="d-flex">
+                        <span data-bs-toggle="modal" class="nav-link d-md-none fs-4" style="cursor:pointer" data-bs-target="#searchModal">
+                            <i class="bi bi-search text-white"></i>
+                        </span>
+                
+                    
+                    <!-- Bottone toggle per mobile -->
+                    <button class="navbar-toggler shadow-none border-0 text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span id="toggleIcon"><i class="bi bi-chevron-bar-down fs-2"></i></span>
+                    </button>
 
-                        <div class="col-4 d-flex justify-content-center">
-                            <a asp-controller="Home" asp-action="Index" class="navbar-brand mx-auto">
-                                <img src="/images/Logo-2.png" alt="Logo" width="140px">
-                            </a>
+                </div>
+
+                <!-- Contenitore per la navbar collassabile -->
+                <div class="collapse navbar-collapse " id="navbarNav">
+                    <div class="d-flex justify-content-center w-100">
+                        <div class="row align-items-center vw-100">
+
+                            <!-- Colonna sinistra: Icona Home (solo desktop) -->
+                            <ul class="navbar-nav col-4 d-none d-md-flex justify-content-center align-items-center">
+                             
+                                <li>
+                                    <span data-bs-toggle="modal" class="nav-link d-none d-md-block  fs-4" style="cursor:pointer" data-bs-target="#searchModal">
+                                        <i class="bi bi-search text-white" ></i>
+                                    </span>
+                                </li>
+                            </ul>
+
+                            <!-- Logo centrale (solo desktop) -->
+                            <div class="col-4 d-none d-md-flex justify-content-center">
+                                <a asp-controller="Home" asp-action="Index" class="navbar-brand mx-auto">
+                                    <img src="/images/Logo-2.png" alt="Logo" width="100px">
+                                </a>
+                            </div>
+
+                            <!-- Colonna destra: Link (per entrambi mobile e desktop) -->
+                            <ul class="navbar-nav d-flex justify-content-center text-center col-12 col-md-4 p-0">
+                                        @if (User.Identity.IsAuthenticated)
+                                        {
+                                            <li class="nav-item m-0 ms-md-2">
+                                                <a asp-action="Cart" asp-controller="Cart" class="nav-link d-none d-md-block fs-4">
+                                                <i class="bi bi-cart-fill"></i>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a asp-action="Cart" asp-controller="Cart" class="nav-link d-block d-md-none myTitle ">
+                                                    Carrello
+                                                </a>
+                                            </li>
+                                            <li class="nav-item m-0 ms-md-2">
+                                                <a asp-action="List" asp-controller="Ticket" class="nav-link d-none d-md-block fs-4">
+                                                <i class="bi bi-ticket-detailed"></i>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a asp-action="List" asp-controller="Ticket" class="nav-link d-block d-md-none myTitle ">
+                                                    I miei biglietti
+                                                </a>
+                                            </li>
+                                            <li class="nav-item m-0 ms-md-2">
+                                                <a asp-action="Profile" asp-controller="User" class="nav-link d-none d-md-block fs-4">
+                                                    <i class="bi bi-person-circle"></i>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a asp-action="Profile" asp-controller="User" class="nav-link d-block d-md-none myTitle ">
+                                                    Profilo
+                                                </a>
+                                            </li>
+
+                                        }
+                                        else
+                                        {   <li>
+                                                <a asp-action="Login" asp-controller="Auth" class="nav-link d-none d-md-block fs-4 ">
+                                                    <i class="bi bi-person-circle"></i>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a asp-action="Profile" asp-controller="User" class="nav-link d-block d-md-none myTitle">
+                                                    Accedi
+                                                </a>
+                                            </li>
+                                        }
+                                    @if (User.Identity.IsAuthenticated)
+                                    {
+                                        <li class="nav-item m-0 ms-md-2">
+                                            <a asp-action="Logout" asp-controller="Auth" class="nav-link d-none d-md-block fs-4">
+                                                <i class="bi bi-door-closed"></i>
+                                            </a>
+                                            <a asp-action="Logout" asp-controller="Auth" class="nav-link d-block d-md-none myTitle">
+                                                Esci
+                                            </a>
+                                        </li>
+                                    }
+                               
+                                </ul>
                         </div>
-
-                        <ul class="navbar-nav col-4 d-flex justify-content-center align-items-center">
-                            <li class="nav-item">
-                                <a asp-controller="Home" asp-action="About" class="nav-link">Chi siamo</a>
-                            </li>
-                            <li class="nav-item">
-                                <a asp-controller="Event" asp-action="List" class="nav-link">Scopri i nostri eventi</a>
-                            </li>
-                            
-                            <li class="nav-item ms-2">
-                                <a asp-action="Login" asp-controller="Auth" class="nav-link fs-4"><i class="bi bi-person-circle"></i></a>
-                            </li>
-                        </ul>
                     </div>
                 </div>
             </div>
         </nav>
-
-
-
     </header>
-    <div class="container-fluid p-0">
-        <main role="main" class="pb-3">
+  
+
+    <div class="container-fluid">
+     
+        <main role="main">
+            <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="searchModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content" style="background-color: transparent; border: none; box-shadow: none;">
+                        <div class="modal-body p-0">
+                            <div class="searchbar-container">
+                                <div class="input-group">
+                                    <span class="input-group-text text-white " id="searchIco"><i class="bi bi-search"></i></span>
+                                    <input type="text" id="searchbarInput" class="form-control shadow-none" autocomplete="off" placeholder="Cerca per nome...">
+
+                                    <span class="input-group-text text-white " data-bs-dismiss="modal" id="closeIco"><i class="bi bi-x" style="cursor:pointer"></i></span>
+
+                                </div>
+                                <ul id="searchbarResults" class="mt-3 d-none searchbar-results"></ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            @* Row che occupa lo spazio della navbar *@
+            <div class="row bg-black" style="height:74px;"></div>
             @RenderBody()
         </main>
     </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - Capstone - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
