--- a/Capstone/wwwroot/css/event_details.css
+++ b/Capstone/wwwroot/css/event_details.css
@@ -1,25 +1,14 @@
-﻿body{
-    font-family: 'Oswald', sans-serif;
-}
+﻿
 
-h1, h2, h3 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-}
-
-p {
-    font-weight: 400;
-}
-
-.main-comment {
-    margin-left: 0;
-}
 
 .reply-comment {
-    margin-left: 30px;
-    padding-left: 10px;
-    border-left: 2px solid #ccc;
-    background-color: #f9f9f9;
+    margin-left: 90px;
+}
+
+@media (max-width: 768px) {
+    .reply-comment {
+        margin-left: 0px;
+    }
 }
 
 .parent-comment-preview {
@@ -30,4 +19,167 @@ p {
     border-left: 2px dashed #ccc;
 }
 
+#bgEvent {
+    background-image: var(--bg-image); /* Utilizza la variabile */
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 
+    position: relative;
+}
+
+    #bgEvent::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        backdrop-filter: blur(40px);
+        z-index: 1;
+    }
+
+.bgOverlay {
+    position: relative;
+    z-index: 2;
+    color: white;
+
+}
+
+.image-wrapper {
+    position: relative;
+    width: 100%;
+    padding-top: 100%; /* 1:1 Aspect Ratio (Square) */
+    border-radius: 15px; /* Border-radius per tutte le immagini */
+    overflow: hidden; /* Nasconde le parti eccedenti */
+    background-color: #eee; /* Opzionale, colore di sfondo */
+}
+
+    /* Immagine all'interno del wrapper */
+    .image-wrapper img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Assicura che l'immagine copra il contenitore senza distorsioni */
+        border-radius: 15px; /* Imposta il border-radius */
+    }
+    
+
+.event-image {
+    width: 350px;
+}
+
+    .myImg{
+        border-radius: 15px;
+        object-fit: cover;
+    }
+
+.genre {
+    border-radius: 2em;
+    border: none;
+    padding: 0.4em 1em;
+    color: white;
+    font-size: 0.8rem;
+    background-color: #393939c9;
+}
+
+#quantity{
+        width: 70px;
+    text-align: center;
+
+}
+
+.myBtnCart {
+    font-family: 'Montserrat', sans-serif !important;
+
+    border-radius: 2em;
+    border: none;
+    padding: 0.5em 1em;
+    color: white;
+    transition: 350ms;
+    text-decoration: none;
+}
+
+    .myBtnCart:hover {
+        background-color: #ff515173!important;
+        transition: 350ms;
+    }
+
+    .quantitybar{
+        background-color: #0303038b;
+        border-radius: 30px;
+        color: white;
+        border: 1px solid #666666;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .quantitybar:focus {
+        color: white;
+        background-color: #0303038b;
+    }
+
+    #ticket{
+        background-color: #5757573f;
+        border-radius: 30px;
+        padding: 2em;
+    }
+
+    .review{
+        background-color: #57575757;
+        border-radius: 30px;
+        padding:1em 1.5em ;
+    }
+
+    .pill {
+        padding: 7px 6px;
+    }
+
+    #reviewText small {
+        font-size: 0.75rem;
+    }
+
+    .myActions {
+        color: #838383;
+        transition: 350ms;
+        text-decoration: none;
+    }
+
+    .myActions:hover {
+        color: #dc3545;
+        transition: 350ms;
+    }
+
+    .myTextReply{
+        color: #acacac;
+    }
+
+.reply {
+    background-color: #75474757;
+    border-radius: 30px;
+    padding: 1em 1.5em;
+}
+
+
+
+.custom-like-modal {
+    top: 100px;
+}
+
+.custom-like-content {
+    background-color: rgba(0, 0, 0, 0.9) !important;
+    color: white !important;
+    border: 1px solid #666666 !important;
+}
+
+@media(max-width: 768px) {
+    .custom-like-modal {
+        top: 100px;
+    }
+}
+
+.date{
+    color: #aeaeae;
+}
