--- a/Capstone/wwwroot/css/site.css
+++ b/Capstone/wwwroot/css/site.css
@@ -1,6 +1,25 @@
+
 html {
-    font-size: 18px!important;
+    font-size: 18px !important;
 }
+
+html::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    
+    background-color: transparent!important;
+}
+
+
+
+html::-webkit-scrollbar {
+    width: 5px;
+    background-color: transparent!important;
+}
+
+    html::-webkit-scrollbar-thumb {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        background-color: #666666;
+    }
 
 h1, h2, h3 {
     font-family: 'Montserrat', sans-serif!important;
@@ -28,63 +47,403 @@ html {
 
 body {
     font-family: 'Oswald', sans-serif!important;
-  margin-bottom: 60px;
+
+}
+
+#bg{
+
+    background-image:url(/images/wallpaperflare.com_wallpaper.jpg);
+    height:calc(100vh - 74px);
+    background-size: cover;
+}
+#blur {
+    backdrop-filter: blur(6px);
+    height:calc(100vh - 74px);
+}
+#start {
+    position: relative;
+    top: 59%;
+    opacity: 0;
+    transition: opacity 2s ease-in-out;
+}
+
+.fade-in {
+    opacity: 1!important;
 }
 
 
+.myBtn {
+    font-family: 'Montserrat', sans-serif !important;
+    
+    border-radius: 2em;
+    border: none;
+    padding: 0.5em 1em;
+    color: white;
+    transition: 350ms;
+    text-decoration: none;
+}
+
+    .myBtn:hover {
+        background-color: #ff5151ff;
+        transition: 350ms;
+    }
+
+
+@media(max-width: 768px) {
+    #bg h1 {
+       font-size: 1em;
+    }
+}
+.text-overlay-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 3em;
+    font-weight: bold;
+    white-space: nowrap;
+}
+
+.text-overlay-bottom-left {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 20px;
+    color: white;
+    font-size: 2em;
+    font-weight: bold;
+    white-space: nowrap;
+}
+
+/* Testo in alto a destra */
+.text-overlay-top-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 20px;
+    color: white;
+    font-size: 2em;
+    font-weight: bold;
+    white-space: nowrap;
+    text-align: end;
+}
+
+/* Testo in basso a destra */
+.text-overlay-bottom-right {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 20px;
+    color: white;
+    font-size: 2em;
+    font-weight: bold;
+    white-space: nowrap;
+    text-align: end;
+}
+
+/* Testo in alto a sinistra */
+.text-overlay-top-left {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 20px;
+    color: white;
+    font-size: 2em;
+    font-weight: bold;
+    white-space: nowrap;
+}
+
+/* Cursor blinking effect */
+.cursor {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    background: white;
+    animation: blink 1s step-start infinite;
+}
+
+@keyframes blink {
+    50% {
+        opacity: 0;
+    }
+}
 #navbar {
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 1000;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(15px);
     transition: top 0.5s;
 }
-.fullscreen-bg {
-    width: 100%;
-    height: 100vh; /* Imposta l'altezza dell'immagine al 100% dell'altezza della viewport */
-    object-fit: cover; /* Adatta l'immagine per coprire completamente l'area senza distorcere le proporzioni */
-}
 
 
-.text-overlay {
-    position: absolute;
-    top: 85%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white; /* Colore del testo */
-    text-align: center;
-    
-}
-@media (max-width: 768px) {
-    .text-overlay {
-        top: 74%; 
+    .mybg {
+        background-color: black;
     }
-}
-.mybg {
-     background-color: black;
-}
 
-.myTitle{
-    color: black;
-}
+    .myTitle {
+        font-family: 'Montserrat', sans-serif !important;
+    }
 
-.myText {
-    color: #666666;
-}
+    .myText {
+        color: #666666;
+    }
 
-.video {
-    width: auto;
-    height: calc(-120px + 100vh);
-    max-height: 960px;
-    border-radius: 10px;
-    transition: border-radius 0.5s ease;
-}
-
-/* Media Queries per Dispositivi Mobili */
-@media (max-width: 768px) {
     .video {
-        max-height: 50vh; /* Riduce l'altezza massima su schermi più piccoli */
+        width: auto;
+        height: calc(-120px + 100vh);
+        max-height: 960px;
+        border-radius: 10px;
+        transition: border-radius 0.5s ease;
     }
+
+    /* Media Queries per Dispositivi Mobili */
+    @media (max-width: 768px) {
+        .video {
+            max-height: 50vh; /* Riduce l'altezza massima su schermi piï¿½ piccoli */
+        }
+    }
+
+    /* Proprietï¿½ delle immagini dalla ricerca di eventi e dj */
+    .result-imageevent {
+        width: 100px; /* Imposta la larghezza fissa */
+        height: 100px; /* Imposta l'altezza fissa */
+        object-fit: cover; /* Adatta l'immagine senza distorcerla, ritagliandola se necessario */
+        border-radius: 5px; /* Aggiungi angoli arrotondati se desiderato */
+    }
+
+    .result-item:hover {
+        background-color: #201b1c !important;
+        transition: background-color 0.2s ease-in-out;
+    }
+
+
+    .result-imagedj {
+        width: 100px; /* Imposta la larghezza fissa */
+        height: 100px; /* Imposta l'altezza fissa */
+        object-fit: cover; /* Adatta l'immagine senza distorcerla, ritagliandola se necessario */
+        border-radius: 50%; /* Aggiungi angoli arrotondati se desiderato */
+    }
+
+
+    .event-wrapper {
+        text-align: center;
+    }
+
+    .event-img {
+        width: 200px;
+        height: 200px;
+        object-fit: cover;
+        display: block;
+        margin: 0 auto;
+        border-radius: 5px;
+    }
+
+    .event-text {
+        display: inline-block;
+        width: 100%; /* Adatta il div alla larghezza dell'immagine */
+        max-width: 100%; /* Impedisce che il testo superi la larghezza */
+        word-wrap: break-word;
+        white-space: normal;
+    }
+
+    h3, .event-date, .event-location, .event-price {
+        margin: 5px 0;
+    }
+
+    .event-price {
+        font-weight: bold;
+        color: #ff5a5f;
+    }
+
+    .event-location{
+        font-size: 0.8em;
+    }
+
+    #pill{
+        position: relative;
+        top: 20px;
+        right: 77px;
+        padding: 8px 7px;
+    }
+    
+
+    /* Rimuovi spazi e margini e fai il wrapping del testo alla larghezza dell'immagine */
+    .event-wrapper .event-text {
+        max-width: 100%;
+        width: auto;
+        word-wrap: break-word;
+    }
+
+
+
+    .searchbar-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        padding-top: 20vh; /* Fa "galleggiare" l'input piï¿½ in alto */
+        position: relative;
+    }
+
+    .searchbar-input {
+        border-radius: 30px;
+        padding: 10px 25px;
+        border: 1px solid #666666;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        width: 100%;
+        max-width: 500px; /* Imposta una larghezza massima */
+        z-index: 10; /* Fa sï¿½ che l'input sia sopra i risultati */
+    }
+
+
+    .searchbar-results {
+        width: 100%;
+        max-width: 500px;
+        position: absolute;
+        top: 100%; /* Posiziona i risultati subito sotto l'input */
+        z-index: 9; /* Fa sï¿½ che i risultati appaiano sotto l'input */
+        background-color: rgba(0, 0, 0, 0.9); /* Sfondo semi-trasparente per i risultati */
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        border-radius: 15px 15px 15px 15px; /* Bordo arrotondato per il fondo */
+        overflow-y: auto; /* Aggiunge lo scroll solo per i risultati */
+        max-height: 400px; /* Limita l'altezza massima dei risultati */
+        padding: 1.5em;
+       
+    }
+
+        .searchbar-results::-webkit-scrollbar-track {
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+            background-color: transparent !important;
+        }
+
+        .searchbar-results::-webkit-scrollbar {
+            width: 5px;
+            background-color: transparent !important;
+        }
+
+        .searchbar-results::-webkit-scrollbar-thumb {
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+            background-color: #666666;
+        }
+
+
+
+
+#searchbarInput {
+    background-color: rgba(0, 0, 0, 0.9) !important;
+    color: white !important;
+    border-left: none !important;
+    border-right: none !important;
+    border-top: 1px solid #666666 !important;
+    border-bottom: 1px solid #666666 !important;
 }
+
+    #searchbarInput::placeholder {
+        color: #666666;
+    }
+
+
+        #searchbarInput:focus {
+            border-top: 1px solid #666666 !important;
+            border-bottom: 1px solid #666666 !important;
+            border-right: none !important;
+            border-left: none !important;
+        }
+
+    #searchIco {
+        background-color: rgba(0, 0, 0, 0.9);
+        border-right: none !important;
+        border-radius: 30px 0 0 30px;
+        border-left: 1px solid #666666;
+        border-top: 1px solid #666666;
+        border-bottom: 1px solid #666666;
+    }
+
+    #closeIco {
+        background-color: rgba(0, 0, 0, 0.9);
+        border-left: none !important;
+        border-radius: 0 30px 30px 0;
+        border-right: 1px solid #666666;
+        border-top: 1px solid #666666;
+        border-bottom: 1px solid #666666;
+    }
+
+    .modal-content {
+        background-color: transparent;
+        border: none;
+        box-shadow: none; /* Rimuove ogni ombra dal contenitore del modale */
+    }
+
+    .modal {
+        top: -90px;
+    }   
+
+    @media(max-width: 768px) {
+        .modal {
+            top: -90px;
+        }
+    }
+
+    .myLink {
+        color: white;
+        transition: 350ms;
+        text-decoration: none;
+    }
+
+    .myLink:hover {
+        color: #dc3545;
+        transition: 350ms;
+    }
+
+.noBtn {
+    border:none; 
+    background:none;
+}
+
+
+.place::placeholder{
+    color: #666666!important;
+}
+
+
+.eventBtn{
+    font-family: 'Montserrat', sans-serif !important;
+    border-radius: 2em;
+    border: none;
+    padding: 0.5em 1em;
+    color: white;
+    transition: 350ms;
+    text-decoration: none;
+    background-color: #585858ff;
+}
+
+    .eventBtn:hover {
+        background-color: #353333b6;
+        transition: 350ms;
+        color: white;
+    }
+
+
+.editBtn {
+    font-family: 'Montserrat', sans-serif !important;
+    border-radius: 2em;
+    border: none;
+    padding: 0.5em 1em;
+    color: white;
+    transition: 350ms;
+    text-decoration: none;
+    background-color: #c7a70eff;
+}
+
+    .editBtn:hover {
+        background-color: #9f8a25bf;
+        transition: 350ms;
+        color: white;
+    }
+
+    .bgEdit{
+        background-color: #c7a70eff;
+    }
